will fix scrollbar on all browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@
     @apply rounded-xl md:px-6 px-4 py-2 hover:opacity-[.7] transition-all ease-in-out duration-300;
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  width: 0px;
+}
+
+.no-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
